Digiland/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digiland-web-service
  namespace: digiland
  labels:
    app: digiland
    component: web
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
    - name: metrics
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: digiland
    component: web
